# fancyargs-rs

./: Cargo.toml  README.md  README.tpl
examples/: combined.rs
src/: lib.rs  parse.rs
tests/: tests.rs
